tests/NormalTests/paczka1/fuzzy1/80310490.err
Error in line 2: GiO8f9E6Vb A428 20,1
Error in line 10: qjk8R5K7 S723 6,6
Error in line 11: A428 A188 26,0
Error in line 23: HrEqoUZYvzh A411 77,7
Error in line 25: GiO8f9E6Vb A428 6,4
Error in line 30: 2j1LY4gy5u A411 92,6
